<resources>
    <string name="app_name">Quizzes</string>s
    <string name="enter_user_name">Enter User Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="already_a_user_login_here">Already a User ? Login Here</string>
    <string name="register">Register</string>
    <string name="confirm_your_password">Confirm Your Password</string>
    <string name="is_t_life_is_collection_of_wiered_quizzes_with_n_no_answer_to_half_the_questions">Is\'t Life is collection of wiered quizzes with \n no answer to half the questions</string>
    <string name="welcom_to_quize_master">Welcom To Quize Master</string>
    <string name="get_started">Get Started</string>
    <string name="log_in_now">Log In Now</string>
    <string name="please_log_in_to_contineu">Please Log In to Contineu</string>
    <string name="enter_email">Enter Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t Have an Account? Sign Up</string>
    <string name="stay_connected">Stay Connected</string>
    <string name="enter_your_enail_address_and_password_to_get_access_to_your_account">Enter Your Enail Address And Password To Get Access To Your Account</string>
    <string name="enter_confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account">ALready have an account ?</string>
    <string name="hello_to_quize_app">Hello To quize app</string>
    <string name="quiz_yourself_daily">Quiz YourSelf Daily</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="ret_us">Ret Us</string>
    <string name="follow_us">Follow Us</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="a_odisha">A: Odisha</string>
</resources>