<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Register_Activity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center_vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/stay_connected" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"

            android:text="@string/enter_your_enail_address_and_password_to_get_access_to_your_account" />

        <EditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/edEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:layout_marginTop="32dp"
            android:textSize="16sp"
            android:inputType="textEmailAddress" />

        <EditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:background="@drawable/edit_text_background"
            android:id="@+id/edConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:textSize="16sp"
            android:hint="@string/enter_confirm_password"
            android:inputType="textPassword" />

        <Button
            android:background="@drawable/btn_primary"
            android:textColor="@color/colorPrimaryButton"
            android:layout_marginTop="24dp"
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:textAlignment="center"
            android:layout_marginTop="16dp"
            android:id="@+id/tvAlreadyHaveAnAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account" />
    </LinearLayout>

    <ImageView
    android:id="@+id/imageView2"
    android:layout_width="0dp"
    android:layout_height="120dp"
    android:scaleType="centerCrop"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:src="@drawable/wave__1_"/>

</androidx.constraintlayout.widget.ConstraintLayout>