<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Login">

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in_now"
            android:textColor="@color/colorPrimaryText"/>

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorPrimaryText"
            android:text="@string/please_log_in_to_contineu" />

        <EditText
            android:id="@+id/etEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/enter_email"
            android:textSize="16sp"
            android:layout_marginTop="32dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="16dp"
            android:hint="@string/password"
            android:textSize="16sp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPassword" />

        <Button
            android:background="@drawable/btn_primary"
            android:id="@+id/btnLogin"
            android:textColor="@color/colorPrimaryButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:layout_marginTop="24dp"/>

        <TextView
            android:textColor="@color/colorPrimaryText"
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:textAlignment="center"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account_sign_up"
            />
    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@drawable/wave__1_"/>

</androidx.constraintlayout.widget.ConstraintLayout>